--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,3 +114,10 @@ services:
             - OPAC_AUDIT_LOG_NOTIFICATION_RECIPIENTS=foo@scielo.org,bar@scielo.org
             - OPAC_RQ_REDIS_HOST=redis-cache
             - OPAC_RQ_REDIS_PORT=6379
+
+    opac-airflow:
+        build:
+            context: ./airflow
+        ports:
+          - "8080:8080"
+        command: webserver
