--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,3 +121,5 @@ services:
         ports:
           - "8080:8080"
         command: webserver
+        environment:
+          - AIRFLOW_HOME=/usr/local/airflow
