Test URL desde environment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -123,3 +123,4 @@ services:
         command: webserver
         environment:
           - AIRFLOW_HOME=/usr/local/airflow
+          - DOCUMENTSTORE_URL=${DOCUMENTSTORE_URL}
